--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
