--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-is": "^19.2.3",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
