--- a/server/.env.example
+++ b/server/.env.example
@@ -12,3 +12,7 @@ JWT_SECRET=tu_secreto_super_seguro_aqui
 
 # CORS Origin (URL de tu frontend en Vercel)
 CORS_ORIGIN=https://aurea.vercel.app
+
+# Email Configuration (Gmail)
+EMAIL_USER=aurea.co.store@gmail.com
+EMAIL_PASSWORD=tu_contraseña_de_aplicacion_de_gmail
