Conectado frontend con backend: checkout y contacto ahora envian datos reales al servidor y disparan emails automaticos

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,4 +15,5 @@ CORS_ORIGIN=https://aurea.vercel.app
 
 # Email Configuration (Gmail)
 EMAIL_USER=aurea.co.store@gmail.com
-EMAIL_PASSWORD=tu_contraseña_de_aplicacion_de_gmail
+EMAIL_PASSWORD=ikmarjrpkvwlcvrl
+
