--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,4 +1,10 @@
 {
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "devCommand": "npm run dev",
   "rewrites": [
     {
       "source": "/(.*)",
