feat: Implementar Cloudinary, colores, ofertas, link distribuidor y skeletons - Agregado sistema de gestión de imágenes con Cloudinary - Implementado selector de colores por producto - Añadido sistema de ofertas con precio rebajado - Agregado link de distribuidor (solo admin) - Implementados skeletons en HomePage y CatalogPage - Fix: Problema 404 en recarga de páginas (vercel.json)

--- a/server/.env.example
+++ b/server/.env.example
@@ -17,3 +17,7 @@ CORS_ORIGIN=https://aurea.vercel.app
 EMAIL_USER=aurea.co.store@gmail.com
 EMAIL_PASSWORD=ikmarjrpkvwlcvrl
 
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=tu_cloud_name
+CLOUDINARY_API_KEY=tu_api_key
+CLOUDINARY_API_SECRET=tu_api_secret
