--- a/client/vercel.json
+++ b/client/vercel.json
@@ -73,6 +73,10 @@
     {
       "source": "/robots.txt",
       "destination": "/robots.txt"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
